--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
                         <td>60 хвилин</td>
                         <td>1000 грн</td>
                     </tr>
+                     <tr>
+                        <td>Шийно-комірцева зона</td>
+                        <td>30 хвилин</td>
+                        <td>500 грн</td>
+                    </tr>
                     <tr>
                         <td>Дитячий масаж (до 3 років)</td>
                         <td>30 хвилин</td>
@@ -150,6 +155,7 @@
                         <td>На замовлення</td>
                     </tr>
                 </tbody>
+ <button class ="btn">При купівлі 10 масажів знижка -10%</button>
             </table>
         </section>
 
