--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
             <h2>Відгуки клієнтів</h2>
             <p>⭐️⭐️⭐️⭐️⭐️ "Чудовий масаж, відчуваю себе набагато краще!" – Іван</p>
             <p>⭐️⭐️⭐️⭐️⭐️ "Професійно та зручно, рекомендую всім!" – Олена</p>
-           <p>⭐️⭐️⭐️⭐️⭐️ "РЕКОМЕНДУЮ ОДНОЗНАЧНО! Павло майстер своєї справи" – Олександр</p>
+            <p>⭐️⭐️⭐️⭐️⭐️ "РЕКОМЕНДУЮ ОДНОЗНАЧНО! Павло майстер своєї справи" – Олександр</p>
+            <a href="https://maps.app.goo.gl/EKfWmobGsvVPnTkt5" target="_blank" class="buttoon">Залишити відгук</a>
             </section>
 
         <section class="contact" id="contact">
